# bc-portable

./: CMakeLists.txt  README.md  vcpkg.json
bc/: CMakeLists.txt
cmake/: README.txt  Welcome.txt  config.h.in
dc/: CMakeLists.txt
libcommon/: CMakeLists.txt
